apps/traefik-forward-auth/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tfa.alixroden.co.uk`)
      services:
        - name: traefik-forward-auth
          port: 80
  tls:
    secretName: alixroden-co-uk-tls
